sort.basic.lessons.sort.basic.gnome.AlgGnomeSort.scala.error
AlgGnomeSort:6: error: not found: value i
	while(i<getNombreValeurs()-1)
              ^AlgGnomeSort:17: error: not found: value i
				{i=1}
                                 ^