sort.basic.lessons.sort.basic.gnome.AlgGnomeSort.scala.code
def gnomeSort() 
{
	var curseur:Int = 0;

	while(i<getNombreValeurs()-1)
	{
		if ( plusPetit(curseur, curseur+1))
		{
			curseur = curseur+1;
		}else{
				echange(curseur, curseur+1)
				curseur= curseur-1
			}
		}
		if (curseur == -1)
				{i=1}
	
} 
